Fix horizontal overflow - no more horizontal scrollbar

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -104,3 +104,8 @@ footer ul li {
     float: left;
     margin-left: 15px;
 }
+
+body > .row {
+    margin-left: 0px;
+    margin-right: 0px;
+}
